--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </head>
 
     <body>
-        <ul class="languagepicker roundborders">
-            <li id="NL"><img src="media/flags/netherlands-flag-icon-16.png"/> (NL)</li>
-<!--            <li id="EN"><img src="media/flags/british-flag-icon-16.png"/> (EN)</li>-->
+        <ul class="languagepicker">
+            <li id="NL"><img src="media/flags/netherlands-flag-icon-16.png"/>NL</li>
+            <!--            <li id="EN"><img src="media/flags/british-flag-icon-16.png"/> (EN)</li>-->
         </ul>
         <section class="all-content"></section>
     </body>
