--- a/language/nl_NL.html
+++ b/language/nl_NL.html
@@ -16,7 +16,7 @@
                 Handleiding Prestashop plugin
             </h1>
             <br />
-            <a class="btn" href="https://github.com/myparcelnl/prestashop/releases/latest" target="_blank">Download de laatste versie hier</a>
+            <a class="btn" href="https://github.com/myparcelnl/prestashop/releases" target="_blank">Download de laatste versie hier</a>
 <!--            <a target="_blank" class="btn" href=""></a>-->
         </section>
         <section class="main-content col-xs-8 col-xs-offset-4 col-lg-7 col-lg-offset-4">
@@ -185,10 +185,25 @@
                 </p>
 
                 <h1 id="3">3 Gebruik van de plugin</h1>
-                <p>
-                    Als de configuratie van de plugin
-                </p>
-                <h2 id="3_A">3.1 Aanmaken van labels</h2>
+<!--                <h2 id="3_A">3.1 Aanmaken van labels</h2>-->
+	            <p>
+		            Het aanmaken van labels kan op verschillende manieren. Je kunt dit doen vanuit het bestellingenoverzicht zoals te zien is op onderstaand filmpje. Op deze manier maak je gemakkelijk meerdere labels tegelijk aan.
+	            </p>
+	            <video width="100%" controls>
+		            <source src="media/prestashop_createlabel_part1.mp4" type="video/mp4">
+	            </video>
+	            <p>
+		            Ook kun je het pakkettype per zending vanuit het bestellingoverzicht wijzigen. Dit doe je door op 'Aanmaken' te klikken bij de bestelling en een ander pakkettype te kiezen en op te slaan. In het filmpje wordt getoond hoe je dit doet.
+	            </p>
+	            <video width="100%" controls>
+		            <source src="media/prestashop_createlabel_part2.mp4" type="video/mp4">
+	            </video>
+	            <p>
+		            Ook wanneer je een bestelling opent, kun je labels aanmaken. Hoe je dit doet, zie je in onderstaand filmpje.
+	            </p>
+	            <video width="100%" controls>
+		            <source src="media/prestashop_createlabel_part3.mp4" type="video/mp4">
+	            </video>
 
                 <footer class="site-footer">
                     <p>
